Revert "Bug 2023928, Bug 2001218 - Control+shift+up/down keboard shortcut doesn't work with NVDA for reorderable moz-box-group elements r=tgiles" for causing failures at browser_aiwindow_applied_memories_button.js.
This reverts commit 0d733a29b882ac1b3eb9a2802bff1f8c6bf7064d.

Revert "Bug 2001218 - Support arrow-controlled components in moz-box-group r=desktop-theme-reviewers,tgiles"

This reverts commit 01286eb191a4442af4478f2f41cdbbba58f44ab5.

UltraBlame original commit: 45c74f872a404f2cbfd251eaa3ce0afc7c8125ea

--- a/toolkit/content/widgets/moz-box-item/moz-box-item.css
+++ b/toolkit/content/widgets/moz-box-item/moz-box-item.css
@@ -15,11 +15,6 @@
   padding-inline-start: calc(var(--button-size-icon) + var(--space-small));
 }
 
-:host(:focus-visible) {
-  outline: var(--focus-outline);
-  outline-offset: var(--focus-outline-inset);
-}
-
 .text-content {
   .label-wrapper {
     grid-area: label;
